# mbc-cms-api

./: Cargo.toml
migrations/: 0001_users_table.up.sql  0002_roles_and_permissions.down.sql  0002_roles_and_permissions.up.sql
src/: main.rs  router.rs
src/data/: mod.rs  roles.rs
src/data/entities/: user.rs
src/documentation/: api_documentation.rs  api_security_addon.rs
src/routes/: mod.rs
